[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Garcia <rafbgarcia@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.19.1"
walkdir = "2.5.0"
